--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ layout: default
       {% include languages.html %}
       {% include education.html %}
       {% include skills.html %}
-      {% include fork.html %}
+      <!--{% include fork.html %}-->
     </div>
 
     <div class="main">
       {% include career-profile.html %}
       {% include experience.html %}
       {% include publications.html %}
-      {% include projects.html %}
-      {% include volunteering.html %}
+      <!--{% include projects.html %}
+      {% include volunteering.html %}-->
     </div>
   </div>
 </div>
